# battery-data-format-ontology

./: .buildinfo  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  README.md  SECURITY.md  battery-data-format.html  battery-data-format.ttl  catalog-v001.xml  config.yml  genindex.html  index.html  objects.inv  pyproject.toml  requirements-docs.txt  requirements.txt  search.html  searchindex.js
.doctrees/: battery-data-format.doctree  environment.pickle  index.doctree
.doctrees/pages/: about.doctree  concepts.doctree  examples.doctree  faq.doctree  quick_start.doctree  specification.doctree  vendor_schemas.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: checks.py  config.py  context_gen.py  foops_toolkit.py  ontology_toolkit.py  rst_gen.py  validate.py
.github/utils/: emmocheck_config.yml
.github/workflows/: ci.yml  docs-build-and-deploy.yml  foops-badge-update.yml
_sources/: battery-data-format.rst.txt  index.rst.txt
_sources/pages/: about.rst.txt  concepts.rst.txt  examples.rst.txt  faq.rst.txt  specification.rst.txt
_static/: pygments.css
_static/css/: custom.css
context/: context.json
docs/: .gitignore  README.md  README.org  battery-data-format.rst  conf.py  index.rst
docs/adr/: 0001-arbin-vendor-module-and-schedule-scoped-terms.md
docs/examples/: metadata_example.json
docs/pages/: about.rst  concepts.rst  contribute.rst  examples.rst  getstarted.rst  quick_start.rst  specification.rst  (+1 more)
pages/: about.html  concepts.html  examples.html  faq.html  quick_start.html  specification.html  vendor_schemas.html
purl/: .htaccess  README.md
schema/: schema.json
scripts/: add_latex_annotations.py
tests/: test_arbin_vendor_module.py  test_ontology_release_readiness.py
tools/: verify_htaccess_rules.py
vendors/: arbin.ttl
(+30 files in other folders)
