[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bda-ontology-tools"
version = "1.0.0"
description = "Tooling scripts for the Battery Data Alliance ontology repository"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["ontology", "battery", "linked data", "EMMO"]

# Core runtime dependencies.
# Needed by: validate.py, ontology_toolkit.py (base ops), foops_toolkit.py, tests.
dependencies = [
    "rdflib>=7",
    "PyYAML>=6",
    "requests>=2.31",
]

[project.optional-dependencies]
# Full docs build: RST generation from TTL (ontopy) + Sphinx HTML.
# Install with: pip install ".[docs]"
docs = [
    "EMMOntoPy>=0.4.0,<1",
    "owlrl>=6",
    "Sphinx>=7.2,<9",
    "pydata-sphinx-theme>=0.16",
    "sphinx-design",
    "sphinx-copybutton",
    "nbsphinx",
    "Pygments>=2.18",
    "docutils>=0.19,<0.22",
    "Jinja2>=3.1",
    "matplotlib>=3.8",
    "numpy>=1.26",
]
# RST generation only, without the full Sphinx stack.
# Install with: pip install ".[ontopy]"
ontopy = [
    "EMMOntoPy>=0.4.0,<1",
    "owlrl>=6",
]

[project.urls]
Homepage    = "https://lfenergy.org/projects/battery-data-alliance/"
Repository  = "https://github.com/BatteryDataAlliance/BDAOntology"
Documentation = "https://batterydata-alliance.github.io/BDAOntology/"
"Bug Tracker" = "https://github.com/BatteryDataAlliance/BDAOntology/issues"

[tool.setuptools]
# This pyproject.toml defines project metadata and dependency groups for the
# tooling scripts. There are no Python packages to install.
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
